tests/errors/null_to_nonnull_reassignment.dang
# Null cannot be assigned to an existing non-null field
let value: String! = "ok"
value = null
